src/objects/CH_FIRAnswer__c.object
<CustomObject>
    <description>NOKIASC-35917</description>
    <fields>
        <fullName>AdditionalDetails__c</fullName>
        <description>NOKIASC-35917</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Support Ticket</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>FIR_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>NOKIASC-35917</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAnswer__c</fullName>
        <description>NOKIASC-35917</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Answer</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>NOKIASC-35917</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandatory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistAnswer__c</fullName>
        <description>NOKIASC-35917</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Picklist Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistValues__c</fullName>
        <description>NOKIASC-35917</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Picklist Values</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>NOKIASC-35917</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <description>NOKIASC-35917</description>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CH FIR Answer</label>
    <nameField>
        <displayFormat>FIR {0000}</displayFormat>
        <label>FIR Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CH FIR Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>